fixed country bug and off center picture

--- a/static/css/emergency.css
+++ b/static/css/emergency.css
@@ -54,7 +54,7 @@
 {
     width: 200px;
     height: auto;
-    margin-left: 145px;
+    margin-left: 25%;
 }
 #link-preview h4, h5
 {
